Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ACV__c.field-meta.xml
<CustomField>
    <fullName>ACV__c</fullName>
    <formula>IF(
OR(TEXT(SBQQ__ChargeType__c) = &quot;&quot;, AND(CONTAINS(Text( Product_Type__c ),&quot;Services&quot;), NOT(ISPICKVAL(Product_Type__c,&quot;Services (Recurring)&quot;)))),
0,
IF(
ISPICKVAL(SBQQ__ChargeType__c, &quot;One-Time&quot;),
SBQQ__NetPrice__c,
IF(
ISPICKVAL(SBQQ__ChargeType__c, &quot;Recurring&quot;),
Customer_Sale_Price_Per_Month__c * SBQQ__EffectiveQuantity__c * 12,
0
)
)
)</formula>
    <label>ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>