Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ACV_Change_Manual__c.field-meta.xml
<CustomField>
    <fullName>ACV_Change_Manual__c</fullName>
    <description>User should be able to enter the “ACV Change Manual” on each segment of a Subscription product.BIZ-50365</description>
    <label>ACV Change Manual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>