Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ACV_Subscription_Price__c.field-meta.xml
<CustomField>
    <fullName>ACV_Subscription_Price__c</fullName>
    <description>BIZ-45090</description>
    <formula>((SBQQ__Quote__r.Sum_Of_DealCloud_Subscriptions__c * 0.2) / (12 * Max_Of_Segment__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Subscription Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>