Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ACV_Type_Override__c.field-meta.xml
<CustomField>
    <fullName>ACV_Type_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACV Type Override</label>
    <type>Checkbox</type>
</CustomField>