Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Annualized_Value__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Value__c</fullName>
    <formula>(NetTotal_No_Currency__c  / Segment_Term__c) * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>