Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Band_Override__c.field-meta.xml
<CustomField>
    <fullName>Band_Override__c</fullName>
    <formula>SBQQ__Quote__r.Band_Override__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Band Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>