Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Band_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Band_Quote_Line__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(SBQQ__Quote__r.License_Basis__c,&quot;Attorneys&quot;),
ISPICKVAL(SBQQ__Quote__r.License_Basis__c,&quot;Lawyers&quot;)
),
 TEXT(SBQQ__Product__r.Attorneys_Up_to__c) ,
IF(
ISPICKVAL(SBQQ__Quote__r.License_Basis__c,&quot;Fee Earners&quot;),
 TEXT(SBQQ__Product__r.Timekeepers_Up_to__c) ,
&quot;0&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Band Quote Line</label>
    <type>Text</type>
</CustomField>