Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Billing_Schedule_Key__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Key__c</fullName>
    <description>This field stores the NetSuite record Id for the Billing Schedule assigned to this quote line.</description>
    <label>NS Billing Schedule Id</label>
    <length>55</length>
    <type>Text</type>
</CustomField>