Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Billing_Schedule_Lookup_Key__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Lookup_Key__c</fullName>
    <description>Concatenated key assigned via price rule and used to query/return the correct Billing Schedule mdt record: Contract_Year__c + “ “ + SBQQ__BillingFrequency__c+ &quot;-&quot; + Quote__r.Number_of_Days_In_Advance__c + “-” + Num_Invoices_Per_Year__c</description>
    <label>Billing Schedule Lookup Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>