Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Indicator__c</fullName>
    <description>Created w.r.t BIZ-68561</description>
    <formula>IF(
ISPICKVAL(CPQ_Option_Type__c, &quot;Static Component&quot;),
IMAGE(&quot;/resource/StaticComponent&quot;, &quot;Static Component&quot;,30,30),
IF(
ISPICKVAL(CPQ_Option_Type__c, &quot;Static Bundle&quot;),
IMAGE(&quot;/resource/StaticBundles&quot;, &quot;Static Bundle&quot;,30,30),
NULL
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>