Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_Parent_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Parent_Product_Name__c</fullName>
    <description>This field holds the Product Name for the Parent Bundle Product to be shown in the OSA. Created as part of BIZ-68653</description>
    <label>Bundle Parent Product Name</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>