Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Product__c</fullName>
    <formula>IF(ISBLANK(SBQQ__RequiredBy__c) &amp;&amp;
License_Product__c=FALSE &amp;&amp; Product_Group__c=&quot;Solutions &amp; Bundles&quot;,
TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bundle Product</label>
    <type>Checkbox</type>
</CustomField>