Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_Products_Extn3__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Products_Extn3__c</fullName>
    <label>Bundle Products Extn3</label>
    <type>TextArea</type>
</CustomField>