Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Check_Created__c.field-meta.xml
<CustomField>
    <fullName>Check_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to check if the Block pricing price rule ran on a particular quote line.</description>
    <label>Check Created</label>
    <type>Checkbox</type>
</CustomField>