Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Cloned_Select_Bundle_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Select_Bundle_Id__c</fullName>
    <description>Created as part od BIZ-49469, to store Select Bundle Id.</description>
    <label>Cloned Select Bundle Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>