Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Consolidated_Quote_Run__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Quote_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of BIZ-53901.</description>
    <label>Consolidated-Quote Run</label>
    <type>Checkbox</type>
</CustomField>