Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_Option_Type__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Option_Type__c</fullName>
    <description>BIZ-68140 - Indicates whether the Quote Line is a Static Bundle, Static Component, or other CPQ option type for segmentation and bundling logic.</description>
    <label>CPQ Option Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CPQ_Option_Type</valueSetName>
    </valueSet>
</CustomField>