Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Sale_Price_Per_Month_With_Adj__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sale_Price_Per_Month_With_Adj__c</fullName>
    <formula>VALUE(IF(CONTAINS(SBQQ__ProductName__c, &apos;Payment Adjustment&apos;), &apos; &apos;, TEXT(Customer_Sale_Price_Per_Month__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Sale Price Per Month With Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>