Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Total_Payment_Adj__c.field-meta.xml
<CustomField>
    <fullName>Customer_Total_Payment_Adj__c</fullName>
    <formula>IF( CONTAINS( SBQQ__Product__r.Name , &apos;Payment Adjustment&apos;) , SBQQ__CustomerTotal__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Total Payment Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>