Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <description>This field hold the deployment type for this product. Created as part of BIZ-67480</description>
    <formula>SBQQ__Product__r.Deployment__c</formula>
    <label>Deployment</label>
    <type>Text</type>
</CustomField>