Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Display__c.field-meta.xml
<CustomField>
    <fullName>Discount_Display__c</fullName>
    <formula>-SBQQ__AdditionalDiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount (Display)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>