Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DLI_Id__c.field-meta.xml
<CustomField>
    <fullName>DLI_Id__c</fullName>
    <label>DLI Id</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>