Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DLIP_Id__c.field-meta.xml
<CustomField>
    <fullName>DLIP_Id__c</fullName>
    <label>DLIP Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>