Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/End_Date_International__c.field-meta.xml
<CustomField>
    <fullName>End_Date_International__c</fullName>
    <formula>IF(
Payment_adjustment__c,
&apos;&apos;,
TEXT(DAY(End_Date_Output__c)) &amp; &quot;-&quot; &amp;
CASE(MONTH(End_Date_Output__c),
1,&quot;Jan&quot;,
2,&quot;Feb&quot;,
3,&quot;Mar&quot;,
4,&quot;Apr&quot;,
5,&quot;May&quot;,
6,&quot;Jun&quot;,
7,&quot;Jul&quot;,
8,&quot;Aug&quot;,
9,&quot;Sep&quot;,
10,&quot;Oct&quot;,
11,&quot;Nov&quot;,
12,&quot;Dec&quot;,
&quot;Error&quot;
) &amp; &quot;-&quot; &amp;
RIGHT(TEXT(YEAR(End_Date_Output__c)),2)
)</formula>
    <label>End Date (International)</label>
    <type>Text</type>
</CustomField>