Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/End_Date_Output__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Output__c</fullName>
    <formula>IF(
ISBLANK(SBQQ__EndDate__c),
DATE(
YEAR(ADDMONTHS(SBQQ__Quote__r.SBQQ__StartDate__c, SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)),
MONTH(ADDMONTHS(SBQQ__Quote__r.SBQQ__StartDate__c, SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)),
MIN(
DAY(SBQQ__Quote__r.SBQQ__StartDate__c),
CASE(
MONTH(ADDMONTHS(SBQQ__Quote__r.SBQQ__StartDate__c, SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)),
2,
IF(
MOD(YEAR(ADDMONTHS(SBQQ__Quote__r.SBQQ__StartDate__c, SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)), 4) = 0 &amp;&amp;
(MOD(YEAR(ADDMONTHS(SBQQ__Quote__r.SBQQ__StartDate__c, SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)), 100) != 0 ||
MOD(YEAR(ADDMONTHS(SBQQ__Quote__r.SBQQ__StartDate__c, SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)), 400) = 0),
29,
28
),
4, 30,
6, 30,
9, 30,
11, 30,
31
)
)
) - 1,
SBQQ__EndDate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Output</label>
    <type>Date</type>
</CustomField>