Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Extended_Initial_Term__c.field-meta.xml
<CustomField>
    <fullName>Extended_Initial_Term__c</fullName>
    <formula>SBQQ__Quote__r.Extended_Initial_Term__c</formula>
    <label>Extended Initial Term</label>
    <type>Checkbox</type>
</CustomField>