Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Extended_Term_Total__c.field-meta.xml
<CustomField>
    <fullName>Extended_Term_Total__c</fullName>
    <formula>IF(
  SBQQ__Quote__r.SBQQ__SubscriptionTerm__c&gt;12,
  (List_Total_Number__c/12)*(SBQQ__Quote__r.SBQQ__SubscriptionTerm__c-12),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Term Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>