Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Ghost_Mapping_Payload__c.field-meta.xml
<CustomField>
    <fullName>Ghost_Mapping_Payload__c</fullName>
    <formula>&quot;{&quot; &amp;
&quot;\&quot;ACV__c\&quot;:&quot; &amp; TEXT(ACV__c) &amp; &quot;,&quot; &amp;
IF(
ISBLANK(ACV_Change__c), 
&quot;&quot;, 
&quot;\&quot;ACV_Change__c\&quot;:&quot; &amp; TEXT(ACV_Change__c) &amp; &quot;,&quot;
) &amp;
&quot;\&quot;OP4I_Deal_Id__c\&quot;:\&quot;&quot; &amp; OP4I_Deal_Id__c &amp; &quot;\&quot;,&quot; &amp;
IF(
ISBLANK(SBQQ__RenewedSubscription__c),
&quot;&quot;,
&quot;\&quot;Subscriptions__c\&quot;:\&quot;&quot; &amp; SBQQ__RenewedSubscription__c &amp; &quot;\&quot;,&quot;
) &amp;
&quot;\&quot;Customer_Sales_Price_Per_Month__c\&quot;:\&quot;&quot; &amp; TEXT(Customer_Sale_Price_Per_Month__c) &amp; &quot;\&quot;,&quot; &amp;
&quot;\&quot;Term_Start_Date__c\&quot;:\&quot;&quot; &amp; TEXT(SBQQ__StartDate__c) &amp; &quot;\&quot;,&quot; &amp;
&quot;\&quot;Term_End_Date__c\&quot;:\&quot;&quot; &amp; TEXT(SBQQ__EndDate__c) &amp; &quot;\&quot;&quot; &amp;
&quot;}&quot;</formula>
    <label>Ghost Mapping Payload</label>
    <type>Text</type>
</CustomField>