Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Include_Intapp_Legal__c.field-meta.xml
<CustomField>
    <fullName>Include_Intapp_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Intapp Legal?</label>
    <type>Checkbox</type>
</CustomField>