Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Initial_Term__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term__c</fullName>
    <formula>IF(
  SBQQ__Quote__r.SBQQ__SubscriptionTerm__c = 1,
  TEXT(SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)&amp;&quot; Month&quot;,
  TEXT(SBQQ__Quote__r.SBQQ__SubscriptionTerm__c)&amp;&quot; Months&quot;
)</formula>
    <label>Initial Term</label>
    <type>Text</type>
</CustomField>