Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Bundle_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Bundle_Product__c</fullName>
    <formula>SBQQ__Product__r.Bundle_product__c 
/*

IF(ISBLANK(SBQQ__RequiredBy__c) &amp;&amp;
  or(
 Product_Group__c=&quot;Solutions &amp; Bundles&quot;,
 SBQQ__ProductCode__c = &quot;BU-01408&quot;
 ),
TRUE, FALSE)
*/
/*
IF(ISBLANK(SBQQ__RequiredBy__c) &amp;&amp;
License_Product__c=FALSE &amp;&amp; Product_Group__c=&quot;Solutions &amp; Bundles&quot;,
TRUE, FALSE)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Bundle Product</label>
    <type>Checkbox</type>
</CustomField>