Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Partial_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Partial_Month__c</fullName>
    <description>Determines whether the quote line represents a partial term. Created w.r.t BIZ-72051
BIZ-77435 - added bundle product skip logic
Updated: Added segment index = 1 condition and changed date mismatch result to TRUE</description>
    <formula>IF(
    AND(
        RIGHT(SBQQ__ProductCode__c, 2) &lt;&gt; &quot;-P&quot;,
        TEXT(SBQQ__Product__r.SBQQ__SubscriptionType__c) = &quot;Renewable&quot;,
        TEXT(SBQQ__Product__r.SBQQ__SubscriptionPricing__c) = &quot;Fixed Price&quot;,
        NOT(ISBLANK(SBQQ__Product__r.SBQQ__SubscriptionTerm__c)),
        SBQQ__SegmentIndex__c = 1
    ),
    IF(
        SBQQ__EndDate__c &lt;&gt;
        (
            ADDMONTHS(SBQQ__StartDate__c,SBQQ__Quote__r.First_Segment_Months__c)-1
        ),
        TRUE,
        FALSE
    ),
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked (TRUE) when segment index = 1 and End Date is not equal to (Start Date + First Segment Months − 1 day) from the related Quote.</inlineHelpText>
    <label>Is Partial Month?</label>
    <type>Checkbox</type>
</CustomField>