Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Prime__c.field-meta.xml
<CustomField>
    <fullName>Is_Prime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is created as a part of story: BIZ-49977 to differentiate a product as prime</description>
    <label>Is Prime</label>
    <type>Checkbox</type>
</CustomField>