Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Quantity_Below_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Is_Quantity_Below_Employee_Count__c</fullName>
    <description>Formula field created w.r.t BIZ-73739</description>
    <formula>SBQQ__Quantity__c  &lt;  SBQQ__Quote__r.Number_of_Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Quantity Below Employee Count</label>
    <type>Checkbox</type>
</CustomField>