Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/isCredit__c.field-meta.xml
<CustomField>
    <fullName>isCredit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created as part of BIZ-53586 to identify credit lines</description>
    <label>isCredit</label>
    <type>Checkbox</type>
</CustomField>