Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Item_Master_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Name_2__c</fullName>
    <formula>Item_Master_Product__r.Item_Name__c</formula>
    <label>Item Master Name</label>
    <type>Text</type>
</CustomField>