Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Item_Master_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Number__c</fullName>
    <formula>SBQQ__Product__r.Item_Master_Product__r.Intapp_Item_Master_Number__c</formula>
    <label>Item Master Number</label>
    <type>Text</type>
</CustomField>