Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Item_Master_Product__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Master Product</label>
    <referenceTo>Item_Master_Product__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>