Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/License_Basis__c.field-meta.xml
<CustomField>
    <fullName>License_Basis__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.License_Basis__c )</formula>
    <label>License Basis</label>
    <type>Text</type>
</CustomField>