Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/License_Summary_value__c.field-meta.xml
<CustomField>
    <fullName>License_Summary_value__c</fullName>
    <label>License Summary value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>