Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/License_Support__c.field-meta.xml
<CustomField>
    <fullName>License_Support__c</fullName>
    <formula>SBQQ__ProductName__c +&quot; &quot; +&quot;-&quot; +&quot; &quot; +TEXT(Support_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Support</label>
    <type>Text</type>
</CustomField>