Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Item_Key__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Key__c</fullName>
    <description>BIZ-68140 - A unique identifier for the Quote Line item.</description>
    <label>Line Item Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>