Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/List_Price_Text__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Text__c</fullName>
    <formula>IF( Payment_adjustment__c ,
NULL,
IF(
OR(
ISPICKVAL(Product_Type__c,&quot;Services&quot;),
ISPICKVAL(Product_Type__c, &quot;Services Discount&quot;),
ISPICKVAL(Product_Type__c, &quot;Support&quot;),
Product_Group__c = &quot;Training&quot;,
Product_Group__c = &quot;Subscription Credit&quot;
),
SBQQ__NetPrice__c,
IF(
OR(
ISBLANK(Segment_Term__c),
ISNULL(Segment_Term__c),
Segment_Term__c =0
),
SBQQ__NetPrice__c/SBQQ__Quote__r.SBQQ__SubscriptionTerm__c,
SBQQ__NetPrice__c/Segment_Term__c
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Net Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>