Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/List_Unit_Price_Absolute__c.field-meta.xml
<CustomField>
    <fullName>List_Unit_Price_Absolute__c</fullName>
    <formula>ABS(SBQQ__ListPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Unit Price Absolute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>