Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Lookup_Data_Id__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Data_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in price rule to calculate Markup Rate if the Support Type = Premium for Software Products</description>
    <label>Lookup Data Id</label>
    <referenceTo>SBQQ__LookupData__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>