Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Lookup_Markup__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Markup__c</fullName>
    <description>To populate markup value for eligible premium support products</description>
    <formula>Lookup_Data_Id__r.Markup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>