Doc/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Max_Of_Segment__c.field-meta.xml
<CustomField>
    <fullName>Max_Of_Segment__c</fullName>
    <description>BIZ-45090</description>
    <label>Max Of Segment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>